ingress-replace-authority/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: hello
      image: photon
      command: [ "/bin/sh", "-c", "sleep 6000" ]
  restartPolicy: Never
