ingress-replace-authority/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: echo-in-mj-test
spec:
  hosts:
  - echo.mj-test.svc.cluster.local
  exportTo:
  - "*"
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
